improve swagger definition, implement car CRUD, set cars and comment model
